--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 
+spring.datasource.url= jdbc:mysql://localhost:3306/groups?useSSL=false
+spring.datasource.username= admin
+spring.datasource.password= mysql
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= none
 
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+#bezkoder.app.jwtSecret= bezKoderSecretKey
+#bezkoder.app.jwtExpirationMs= 86400000
