--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/groups?useSSL=false
-spring.datasource.username= admin
-spring.datasource.password= mysql
-
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto= none
+#spring.datasource.url= jdbc:mysql://localhost:3306/groups?useSSL=false
+#spring.datasource.username= admin
+#spring.datasource.password= mysql
+#
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto= none
 
 # App Properties
 #bezkoder.app.jwtSecret= bezKoderSecretKey
