--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3'
 services:
-  hk-mysql:
+  aot-mysql:
     container_name: aot-mysql
     image: mysql/mysql-server:5.7
     environment:
       MYSQL_DATABASE: groups
       MYSQL_ROOT_PASSWORD: mysql
+      MYSQL_USER: admin
       MYSQL_ROOT_HOST: '%'
     ports:
     - "3306:3306"
@@ -16,7 +17,10 @@ services:
     volumes:
     - .:/app
     - ~/.m2:/root/.m2
+    expose:
+      - "8080"
     working_dir: /app
     command: mvn clean spring-boot:run
     depends_on:
     - aot-mysql
+
